--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.7",
+    "cheerio": "^1.0.0-rc.3",
+    "fp-ts": "^2.6.1",
     "gatsby": "^2.21.37",
     "gatsby-image": "^2.4.4",
     "gatsby-plugin-manifest": "^2.4.5",
@@ -23,12 +25,17 @@
     "gatsby-plugin-styled-components": "^3.3.2",
     "gatsby-source-filesystem": "^2.3.4",
     "gatsby-transformer-sharp": "^2.5.2",
+    "io-ts": "^2.2.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
-    "styled-components": "^5.1.0"
+    "source-map-support": "^0.5.19",
+    "styled-components": "^5.1.0",
+    "ts-node": "^8.10.1"
   },
   "devDependencies": {
+    "@types/cheerio": "^0.22.18",
+    "@types/got": "^9.6.11",
     "@types/react-helmet": "^6.0.0",
     "@types/styled-components": "^5.1.0",
     "husky": "^4.2.5",
