--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.7",
     "cheerio": "^1.0.0-rc.3",
+    "downshift": "^5.4.2",
     "gatsby": "^2.21.37",
     "gatsby-image": "^2.4.4",
     "gatsby-plugin-manifest": "^2.4.5",
