--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
-    "generate": "ts-graphql-gen"
+    "generate": "ts-node -T ./scripts/main.ts"
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.7",
