--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "gatsby-source-filesystem": "^2.3.4",
     "gatsby-transformer-sharp": "^2.5.2",
     "lodash": "^4.17.15",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "0.0.0-experimental-33c3af284",
+    "react-dom": "0.0.0-experimental-33c3af284",
     "react-helmet": "^6.0.0",
     "source-map-support": "^0.5.19",
     "styled-components": "^5.1.0",
