--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "generate": "ts-node -T ./scripts/main.ts"
   },
   "dependencies": {
+    "@reach/dialog": "^0.10.3",
     "babel-plugin-styled-components": "^1.10.7",
     "cheerio": "^1.0.0-rc.3",
     "gatsby": "^2.21.37",
